labs/student/ctr-exercise-rest/src/main/k8s/excercise07/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.3
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql
        ports:
        - containerPort: 3306
          name: mysql
