labs/student/ctr-exercise-rest/src/main/k8s/excercise07/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctr-excercise-rest
  labels:
    name: ctr-excercise-rest
spec:
  rules:
  - host: exercise.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ctr-excercise-rest
            port:
              name: web
